Fix vertical scroll when content shouldn't be overflowing

--- a/assets/sass/pages/problem_types.scss
+++ b/assets/sass/pages/problem_types.scss
@@ -21,6 +21,8 @@
 
 #list-view {
 	flex: 2;
+	display: flex;
+	flex-direction: column;
 }
 
 #single-view {
